--- a/audacious-uade/PKGBUILD
+++ b/audacious-uade/PKGBUILD
@@ -1,14 +1,14 @@
 pkgname=audacious-uade
-pkgver=0.12.1
+pkgver=0.12.2
 pkgrel=1
 pkgdesc="UADE plugin for Audacious music player"
 arch=('x86_64' 'aarch64')
 url="https://github.com/mvtiaine/audacious-uade"
 license=('GPL')
 depends=('audacious')
-makedepends=('pkg-config')
+makedepends=('which' 'make' 'pkg-config')
 source=(https://github.com/mvtiaine/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.bz2)
-sha256sums=('0292fba98ffad83edbb7d500d11615d924c42a94aaa220aad0f4f6b704369127')
+sha256sums=('3f1e15adbc574307d6d706a27a39d19037d7720a2d632ac1f8c5159f40787da5')
 
 build() {
 	cd "$srcdir/$pkgname-$pkgver"
